--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -107,7 +107,8 @@ body {
 }
 .heading-section .bold-action-button {
   width: 55%;
-  height: 55px;
+  height: clamp(-moz-fit-content, 60px, 60px);
+  height: clamp(fit-content, 60px, 60px);
   margin-bottom: 2rem;
   font-family: "Assistant", Sans-serif;
   font-weight: bold;
